--- a/estilos/estilos.css
+++ b/estilos/estilos.css
@@ -1,22 +1,25 @@
 h1{
     color:#f4c2c2;
-    height: 40px;
-    width: 287px;
+    height: 26px;
+    width: 225px;
     border: dotted #bb6f91  2px;
-    margin: 28px;
+    margin-left: 57px;
+    margin-top: 25px;
     padding: 10px;
-    background-color: black
+    background-color: black;
 }
-body{
-    background-color: black
+
+.imag1{ 
+    margin-left: 125px;
+    margin-top: 15px;
 }
 
 .fondonegro{
-    background-color: black;
     color: aliceblue;
     padding: 20px;
-    border: outset gray  5px;
+    border: outset #df3687  2px;
     width: 250px;
+    margin-left: 30px;
 }
 
 .button:hover {
@@ -29,28 +32,18 @@ body{
     background-color: violet;
     color: black;
     border: dotted black  1px;
-
 }
 
 .clase1{
-    background-color: black;
+    background-color: red;
+    margin-left: 125px;
+    margin-top: 15px;
 }
 
-/* .caja{
-    background-color: purple;
-    height: 10px;
-    width: 70px;
-    border: outset gray  5px;
-    margin: 25px;
-    padding: 10px;
-} */
+.clase6.button{
+    background-color: #bb6f91;
+    margin-top: 20px;
+    margin-left: 90px;
+    margin-bottom: 10px;
+}
 
-/* .cajafort{
-    text-decoration: #012ef3;
-    background-color: transparent;
-    height: 50px;
-    width: 500px;
-    border: outset gray  5px;
-    margin: 40px;
-    padding: 20px;
-} */
